Bug 1809812: Fix catalog overflow on mobile
Added property to hide overflow on offending section of catalog.

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1809812

--- a/frontend/public/components/catalog/_catalog.scss
+++ b/frontend/public/components/catalog/_catalog.scss
@@ -118,6 +118,7 @@ $catalog-tile-width: $co-m-catalog-tile-width;
 
   &__content {
     flex: 1 1 auto;
+    overflow: hidden;
   }
 
   &__description {
